--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@types/cors": "^2.8.13",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "http-proxy-middleware": "^2.0.6",
@@ -23,6 +25,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "sass": "^1.58.1",
+    "swr": "^2.0.3",
     "typescript": "4.9.5"
   }
 }
